# bullshit-or-fit

./: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-entrypoint.sh
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_jobtrends_hn_hiring.py  0002_keyword_month_stats.py  0003_comp_and_cohorts.py  0004_source_stream.py  0005_ats_jobs.py  0006_keyword_source_demand.py  0007_comp_unification.py  0008_skill_comp_stat.py  0009_location_stat.py  0010_warn_notices.py  0011_oews_wage.py  0012_commute_shed_employer.py  0013_commute_shed_stat.py  0014_experiment_event.py  0015_experiment_buy_click_label.py
backend/app/: config.py  db.py  experiments.py  logging_config.py  main.py  page_chrome.json
backend/app/jobtrends/: __init__.py  adzuna.py  ats.py  cli.py  commute_shed.py  comp.py  company_pay.py  extract.py  geo.py  hn_algolia.py  oews.py  (+16 more)
backend/scripts/: new_migration.py
backend/tests/: test_experiments.py  test_jobtrends_adzuna.py  test_jobtrends_ats.py  test_jobtrends_commute_shed.py  test_jobtrends_comp_churn.py  test_jobtrends_comp_sources.py  test_jobtrends_company_pay.py  test_jobtrends_extract.py  test_jobtrends_geo.py  test_jobtrends_ingest.py  test_jobtrends_market.py  test_jobtrends_market_fit.py  test_jobtrends_neogov.py  test_jobtrends_oews.py  test_jobtrends_remote.py  test_jobtrends_routes.py  test_jobtrends_skill_comp.py  test_jobtrends_skills.py  test_jobtrends_usajobs.py  test_jobtrends_warn.py  test_jobtrends_workday.py  test_proxy_routes.py
(+28 files in other folders)
