[project]
name = "bullshit-or-fit"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings>=2.7.0",
    "email-validator==2.3.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.14.14",
    "mypy==1.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
